--- a/template.sty
+++ b/template.sty
@@ -6,15 +6,17 @@
 \usepackage{cancel} % Draw diagonal lines and arrows in math equations
 \usepackage{mathtools} % Starred versions of amsmath matrix environments; Multiline, cases, gathered environment
 
-%% Sybmols
+%% Sybmols 
 
 \usepackage{amssymb} % Extended symbol collection - also loads amsfonts
+\usepackage{stmaryrd} % Extra symbols
 
 %% Fonts
 
-\usepackage{mathrsfs}
+\usepackage{mathrsfs} % Support \mathcal and \mathscr
+\usepackage{steinmetz} % Electronics notation
 
-%% Environments
+%% Environments 
 
 \usepackage{amsthm} % Use theorems
 
@@ -34,7 +36,7 @@
 \usepackage{geometry} % Page layout customisation
 \usepackage{marginnote} % Add text in margins
 
-%% Text enchancements
+%% Text enhancements
 
 \usepackage[none]{hyphenat} % Disable hyphenation of long text
 \usepackage{ragged2e} % Text alignment options
@@ -46,15 +48,14 @@
 
 %% Graphics
 
-\usepackage{graphicx} % Extension to graphics
+\usepackage{graphicx} % Extension to graphics 
 \graphicspath{ {./figures/} }
 
 %% Miscellaneous
 
-\usepackage{listings} % Typeset programming code
+\usepackage{listings} % Typeset programming code 
 \usepackage{siunitx} % SI units package
 \usepackage{physics} % Vectors/derivatives/operators
-% \usepackage[dvipsnames]{xcolor} % Extension to color package
 \usepackage{pdfpages} % Import PDFs into document
 
 \usepackage[hidelinks]{hyperref} % Handle cross-referencing
@@ -64,23 +65,37 @@
 
 \usepackage[warnings-off={mathtools-colon, mathtools-overbracket}]{unicode-math}
 \setmathfont{Latin Modern Math}
-\setmathfont{TeX Gyre Pagella Math}[range={bb,bbit}, Scale=MatchUppercase]
-\setmathfont[range={\mathcal,\mathbfcal},StylisticSet=1]{XITS Math}
-
-%%% Preamble
+\setmathfont[range={bb, bbit}, Scale=MatchUppercase]{TeX Gyre Pagella Math}
+\setmathfont[range={\mathcal, \mathbfcal}, StylisticSet=1]{XITS Math}
+\setmathfont[range={"2205}]{XITS Math}
+%%% Preamble 
 
 %% Misc Commands
 
-\newcommand{\e}{\mathrm{e}}
-\DeclarePairedDelimiter\ceil{\lceil}{\rceil}
-\DeclarePairedDelimiter\floor{\lfloor}{\rfloor}
-
-\DeclarePairedDelimiter\avec{\langle}{\rangle}
-
-% \newcommand{\avec}[1]{\langle{}\: {#1} \:\rangle{}}
-
+\newcommand{\e}{e}
 \let\exp\relax
 \DeclareMathOperator{\exp}{exp}
+
+\let\varnothing\relax
+\newcommand{\varnothing}{\char"2205}
+
+\newcommand*{\vertbar}{\rule[-1ex]{0.5pt}{2.5ex}}
+\newcommand*{\horzbar}{\rule[.5ex]{2.5ex}{0.5pt}}
+
+%% Paired Delimiters
+
+\DeclarePairedDelimiter\ceil{\lceil}{\rceil}
+\DeclarePairedDelimiter\floor{\lfloor}{\rfloor}
+\DeclarePairedDelimiter\avec{\langle}{\rangle}
+
+%% Probability Functions
+
+\let\Pr\relax
+\DeclareMathOperator{\Pr}{Pr}
+\DeclareMathOperator{\E}{E}
+\DeclareMathOperator{\Var}{Var}
+\DeclareMathOperator{\Cov}{Cov}
+\DeclareMathOperator{\Corr}{Corr}
 
 %% Hyperbolic Functions
 
@@ -92,9 +107,6 @@
 \DeclareMathOperator{\arccsch}{arccsch}
 
 %% Linear Algebra
-
-\newcommand*{\vertbar}{\rule[-1ex]{0.5pt}{2.5ex}}
-\newcommand*{\horzbar}{\rule[.5ex]{2.5ex}{0.5pt}}
 
 \let\det\relax
 \DeclareMathOperator{\det}{det}
@@ -115,20 +127,18 @@
 \DeclareMathOperator{\vker}{ker}
 \DeclareMathOperator{\vcoker}{coker}
 
-\newcommand{\columnspace}[1]{\func{\mathcal{C}}{\symbfit{#1}}}
-\newcommand{\rowspace}[1]{\func{\mathcal{C}}{\symbfit{#1}^{\top}}}
-\newcommand{\nullspace}[1]{\func{\mathcal{N}}{\symbfit{#1}}}
-\newcommand{\leftnullspace}[1]{\func{\mathcal{N}}{\symbfit{#1}^{\top}}}
+\newcommand{\columnspace}[1]{\mathcal{C}\left(\symbfit{#1}\right)}
+\newcommand{\rowspace}[1]{\mathcal{C}\left(\symbfit{#1}^{\top}\right)}
+\newcommand{\nullspace}[1]{\mathcal{N}\left(\symbfit{#1}\right)}
+\newcommand{\leftnullspace}[1]{\mathcal{N}\left(\symbfit{#1}^{\top}\right)}
 
 %% Laplace Transform
 
-\newcommand{\laplace}[2]{\mathcal{L} \left\{{#1}\right\} \left({#2}\right)}
-\newcommand{\invlaplace}[2]{\mathcal{L}^{-1} \left\{{#1}\right\} \left({#2}\right)}
+\newcommand{\laplace}[1]{\char"2112 \left\{{#1}\right\}}
 
 %% Fourier Transform
 
-\newcommand{\fourier}[2]{\mathcal{F} \left\{{#1}\right\} \left({#2}\right)}
-\newcommand{\invfourier}[2]{\mathcal{F}^{-1} \left\{{#1}\right\} \left({#2}\right)}
+\newcommand{\fourier}[1]{\char"2131 \left\{{#1}\right\}}
 
 %% Theorems
 
@@ -140,7 +150,7 @@
 \newtheorem{corollary}{Corollary}[theorem]
 
 \newtheorem{axiom}{Axiom}
-\newtheorem*{remark}{Remark}
+\newtheorem{remark}{Remark}
 
 \newenvironment{solution}[1][Solution]{\proof[#1]\mbox{}\\*}{\endproof}
 \newenvironment{solutionF}[1][Solution]{\proof[#1]\mbox{}}{\endproof}
