--- a/MXB105 Lecture Notes.tex
+++ b/MXB105 Lecture Notes.tex
@@ -216,14 +216,6 @@ Dividing by either the sine or cosine function gives:
     \int u \dd{v} = uv - \int v \dd{u}
 \end{equation*}
 \end{theorem}
-% \begin{proof}
-%     \begin{align*}
-%         \dv{}{x}\left( u(x)v(x) \right) &= \dv{u(x)}{x}v(x) + u(x)\dv{v(x)}{x} \\
-%         u(x)\dv{v(x)}{x} &= \dv{}{x}\left( u(x)v(x) \right) - \dv{u(x)}{x}v(x) \\
-%         \int u(x)\dv{v(x)}{x} \dd{x} &= \int \dv{}{x}\left( u(x)v(x) \right) \dd{x} - \int \dv{u(x)}{x}v(x) \dd{x} \\
-%         \int u(x)\dd{v(x)} &= u(x)v(x) - \int v(x) \dd{u(x)}
-%     \end{align*}
-% \end{proof}
 \subsection{Integration by Substitution}
 \begin{theorem}
     \begin{equation*}
@@ -323,7 +315,7 @@ Dividing by either the sine or cosine function gives:
 	\begin{mdframed}[style=exampledefault,frametitle={Properties of Definite Integrals}]
 		\begin{theorem}
 			Suppose that $f(x)$ and $g(x)$ are continuous on the interval $I$,
-            with $a,\:b,\:c\in I$ and $k\in\mathbb{R}$ then
+            with $a,\:b,\:c\in I$, with $a < c < b$, and $k\in\mathbb{R}$ then
 			\begin{enumerate}[label=\normalfont\alph*)]
 				\item $\displaystyle\int_a^a f(x) \dd{x} = 0$.
 				\item $\displaystyle\int_a^b f(x) \dd{x} = -\int_b^a f(x) \dd{x}$.
@@ -380,7 +372,7 @@ infinite series (definite integrals) and antiderivatives
 \newpage
 \subsection{Taylor and Maclaurin Polynomials}
 \begin{theorem}[Taylor Polynomials]
-    If $f(x)$ is a $n$ differentiable function at $x_0$, then the $n$th degree
+    If $f(x)$ is an $n$ differentiable function at $x_0$, then the $n$th degree
     Taylor polynomial for $f(x)$ near $x_0$, is given by
     \begin{equation*}
         f(x) \approx p_n(x) = \sum_{k=0}^n \frac{f^{\left( k \right)}(x_0)}{k!} \left( x-x_0 \right)^k
@@ -412,7 +404,7 @@ infinite series (definite integrals) and antiderivatives
     \end{equation*}
 \end{definition}
 \begin{definition}[Maclaurin Series]
-    If a Taylor series is centred on $x_0=0$, it is called a Maclaurin series,
+    If a Taylor series is centred at $x_0=0$, it is called a Maclaurin series,
     defined by
     \begin{equation*}
         f(x) = \sum_{n=0}^{\infty} \frac{f^{\left( n \right)}(0)}{n!} x^n
@@ -433,7 +425,7 @@ infinite series (definite integrals) and antiderivatives
     \end{equation*}
     holds at a point $x$ iff
     \begin{align*}
-        \lim_{n\to\infty} \left[ f(x) - \sum_{n=0}^{\infty} \frac{f^{\left( n \right)}(x_0)}{n!} \left( x-x_0 \right)^n \right] &= 0 \\
+        \lim_{n\to\infty} \left[ f(x) - \sum_{k=0}^{n} \frac{f^{\left( k \right)}(x_0)}{k!} \left( x-x_0 \right)^k \right] &= 0 \\
         \lim_{n\to\infty} R_n(x) &= 0
     \end{align*}
 \end{theorem}
@@ -453,8 +445,8 @@ infinite series (definite integrals) and antiderivatives
         \abs{x - a} > R
     \end{equation*}
     The behaviour of the power series on the boundary, that is, where
-    $\abs{x - a} = R$, can be determined by substituting $x = R + a$ for the
-    upper boundary, and $x = -R + a$ for the lower boundary.
+    $\abs{x - a} = R$, can be determined by substituting $x = R + a$ and 
+    $x = -R + a$ into the series, for the upper and lower boundaries, respectively.
 \end{definition}
 \subsection{Convergence Tests}
 For any power series of the form $\displaystyle\sum_{i=i_0}^\infty a_i$.
@@ -488,12 +480,14 @@ For any power series of the form $\displaystyle\sum_{i=i_0}^\infty a_i$.
         \textbf{Function} & \textbf{Series} & \textbf{Interval of Convergence} \\
         \midrule
         $\e^{x}$ & $\displaystyle \sum_{n=0}^{\infty} \frac{x^n}{n!}$ & $-\infty < x < \infty$ \\[14pt]
-        $\sin{\left( x \right)}$ & $\displaystyle \sum_{n=0}^{\infty} \frac{\left( -1 \right)^n}{\left( 2n+1 \right)!} x^{2n+1}$ & $-\infty < x < \infty$ \\[14pt]
-        $\cos{\left( x \right)}$ & $\displaystyle \sum_{n=0}^{\infty} \frac{\left( -1 \right)^n}{\left( 2n \right)!} x^{2n}$ & $-\infty < x < \infty$ \\[14pt]
-        $\frac{1}{1-x}$ & $\displaystyle \sum_{n=0}^{\infty} x^n$ & $-1 < x < 1$ \\
+        $\sin{\left( x \right)}$ & $\displaystyle \sum_{n=0}^{\infty} \left( -1 \right)^n \frac{x^{2n+1}}{\left( 2n+1 \right)!}$ & $-\infty < x < \infty$ \\[14pt]
+        $\cos{\left( x \right)}$ & $\displaystyle \sum_{n=0}^{\infty} \left( -1 \right)^n \frac{x^{2n}}{\left( 2n \right)!}$ & $-\infty < x < \infty$ \\[14pt]
+        $\displaystyle \frac{1}{1-x}$ & $\displaystyle \sum_{n=0}^{\infty} x^n$ & $-1 < x < 1$ \\[14pt]
+        $\displaystyle \frac{1}{1+x^2}$ & $\displaystyle \sum_{n=0}^{\infty} \left( -1 \right)^n x^{2n}$ & $-1 < x < 1$ \\[14pt]
+        $\displaystyle \ln{\left( 1+x \right)}$ & $\displaystyle \sum_{n=0}^{\infty} \left( -1 \right)^{n+1} \frac{x^n}{n}$ & $-1 < x \leq 1$ \\[14pt]
         \bottomrule
     \end{tabular}
-    \caption{Maclaurin Series of Common Functions}
+    \caption{Maclaurin series of common functions.}
     % \label{}
 \end{table}
 \newpage
@@ -508,14 +502,14 @@ For any power series of the form $\displaystyle\sum_{i=i_0}^\infty a_i$.
 \end{definition}
 \subsection{Level Curves}
 \begin{definition}
-    Level curves or \textit{contour curves} of a function of two variables is a
-    curve along which the function has constant value.
+    The level curves or \textit{contour curves} of a function of two variables are 
+    curves along which the function has a constant value.
     \begin{equation*}
-        L_c\left( f \right) = \left\{ \left( x,\: y \right) : f\left(x,\: y\right) = c\right\}
+        L_c\left( f \right) = \bigl\{ \left( x,\: y \right) : f\left(x,\: y\right) = c\bigr\}
     \end{equation*}
+    The level curves of a function can be determined by substituting $z=c$, and
+    solving for $y$.
 \end{definition}
-The level curves of a function can be determined by substituting $z=c$, and
-solving for $y$.
 \subsection{Limits and Continuity}
 \begin{definition}[Finite Limit of Multivariable Functions using the
     $\varepsilon$-$\delta$ Definition]
@@ -544,7 +538,7 @@ solving for $y$.
 Recognising continuous functions:
 \begin{itemize}
     \item A sum, difference or product of continuous functions is continuous.
-    \item A quotient of continuous functions is continuous expect where the
+    \item A quotient of continuous functions is continuous except where the
         denominator is zero.
     \item A composition of continuous functions is continuous.
 \end{itemize}
@@ -623,13 +617,13 @@ Recognising continuous functions:
     \end{equation*}
 \end{proof}
 \begin{theorem}
-    If $\symbf{\nabla}f = 0$, then $\symbf{\nabla}f$ is normal to the level
-    curves of $f$ at any point $(c_1,\: \ldots,\: c_n)$.
+    If $\symbf{\nabla}f(c_1,\: \ldots,\: c_n) \neq 0$, then $\symbf{\nabla}f(c_1,\: \ldots,\: c_n)$ is normal to the level
+    curve of $f$ that passes through $(c_1,\: \ldots,\: c_n)$.
 \end{theorem}
 \subsection{Higher-Order Partial Derivatives}
 \begin{definition}
     Higher-order partial derivatives can be denoted using three different
-    notation. The following table shows the mixed partial derivative of
+    notations. The following table shows the mixed partial derivative of
     $f(x,\: y)$ w.r.t. $x$ then $y$.
     \begin{table}[H]
         \centering
@@ -641,10 +635,9 @@ Recognising continuous functions:
             \bottomrule
         \end{tabular}
         \caption{Mixed Partial Derivative Notation}
-        % \label{}
     \end{table}
     For partial derivatives w.r.t. the same variable, a superscript can be used
-    in Euler notation.
+    in Leibniz and Euler notation.
     \begin{table}[H]
         \centering
         \begin{tabular}{c c c}
@@ -661,7 +654,7 @@ Recognising continuous functions:
 \subsection{Hessian Matrix}
 \begin{definition}
     Let the Hessian matrix $\symbf{H}$ be the matrix of second-order partial
-    derivative operators defined as shown below
+    derivative operators as shown below
     \begin{equation*}
         \symbf{H} =
         \mqty[
@@ -683,7 +676,7 @@ Recognising continuous functions:
 \subsection{Critical Points}
 For the function $f(x,\: y)$, the point $(x_0,\: y_0)$ is a critical point if
 \begin{equation*}
-    f_x(x_0,\: y_0) \quad \text{and} \quad f_y(x_0,\: y_0).
+    f_x(x_0,\: y_0) = 0 \quad \text{and} \quad f_y(x_0,\: y_0) = 0.
 \end{equation*}
 \subsection{Classification of Critical Points}
 The nature of a critical point can be classified using the second derivative test:
@@ -744,12 +737,38 @@ The nature of a critical point can be classified using the second derivative tes
 	\end{mdframed}
 \end{figure}
 \subsection{Nonrectangular Regions}
+If the limits of integration depend on the variable $x$ or $y$, then the region 
+may be classified as Type I or Type II.
 \subsubsection{Type I Regions}
+If the region is: 
+\begin{description}
+    \item[Bounded on the left \& right by:] $x=a$ and $x=b$
+    \item[Bounded below \& above by:] $y=g_1(x)$ and $y=g_2(x)$
+\end{description}
+where $g_1(x) \leq g_2(x)$ for $a \leq x \leq b$, then
+\begin{equation*}
+    \iint\limits_{\Omega} f(x,\: y) \dd{A} = \int_a^b\int_{g_1(x)}^{g_2(x)} f(x,\: y) \dd{y} \dd{x}.
+\end{equation*}
 \subsubsection{Type II Regions}
-\subsection{Volume under a Three Variable Function}
+If the region is: 
+\begin{description}
+    \item[Bounded on the left \& right by:] $x=h_1(y)$ and $x=h_2(y)$
+    \item[Bounded below \& above by:] $y=c$ and $y=d$
+\end{description}
+where $h_1(y) \leq h_2(y)$ for $c \leq y \leq d$, then
+\begin{equation*}
+    \iint\limits_{\Omega} f(x,\: y) \dd{A} = \int_c^d\int_{h_1(x)}^{h_2(x)} f(x,\: y) \dd{x} \dd{y}.
+\end{equation*}
+\subsection{Polar Coordinates}
+To determine the area of a region defined using polar coordinates, 
+the function can be integrated w.r.t. the radius $r$, and the angle $\theta$.
+\begin{equation*}
+    \iint\limits_{\Omega} f(r,\: \theta) \dd{A} = \int_{\theta_1}^{\theta_2}\int_{r_1(\theta)}^{r_2(\theta)} f\left(r,\: \theta\right) r \dd{r} \dd{\theta}.
+\end{equation*} 
+\subsection{Volume of a Three Variable Function}
 \begin{definition}
     If $f$ is a function of three variables that is continuous and nonnegative
-    on a region $\Omega$ in the $xyz$-space, then the volume of $f(x,\: y, \: z)$
+    on a region $\Omega$ in the $xyz$-space, then the volume enclosed by $f(x,\: y, \: z)$
     and the region $\Omega$ is defined by
     \begin{equation}\label{eq:volume_of_3d_function}
         V = \lim_{n\to\infty} \sum_{k=1}^{n} f(x_k^\ast,\: y_k^\ast,\: z_k^\ast) \Delta V_k
@@ -767,8 +786,8 @@ The nature of a critical point can be classified using the second derivative tes
 \end{proof}
 \subsection{Triple Integrals}
 \begin{definition}
-    A triple integral of a function is the net signed volume
-    defined over a finite closed solid region $\Omega$ in an $xyz$ coordinate system and the sums in
+    The triple integral of a function is the net signed volume
+    defined over a finite closed solid region $\Omega$, and the sums in
     \hyperref[eq:volume_of_3d_function]{Equation \ref{eq:volume_of_3d_function}}
     are also called Riemann sums, and the limit is denoted as
     \begin{equation*}
@@ -779,12 +798,12 @@ The nature of a critical point can be classified using the second derivative tes
 \begin{figure}[H]
 	\begin{mdframed}[style=exampledefault,frametitle={Properties of Triple Integrals}]
 		\begin{theorem}
-            Suppose that $f(x,\: y,\: z) $ and $g(x,\: y,\: z)$ are continuous on $\Omega$
+            Suppose that $f(x,\: y,\: z) $ and $g(x,\: y,\: z)$ are continuous on $\Omega$,
             and $\Omega$ can be subdivided into $\Omega_1$ and $\Omega_2$ then
 			\begin{enumerate}[label=\normalfont\alph*)]
 				\item $\displaystyle\iiint\limits_\Omega kf(x,\: y,\: z) \dd{V}
                     = k\iiint\limits_\Omega f(x,\: y,\: z) \dd{V}$.
-				\item $\displaystyle\iiint\limits_\Omega \bigl(f(x,\: y,\: z) + g(x,\: y,\: z)\bigr) \dd{V}
+				\item $\displaystyle\iiint\limits_\Omega f(x,\: y,\: z) + g(x,\: y,\: z) \dd{V}
                     = \iiint\limits_\Omega f(x,\: y,\: z) \dd{V} + \iiint\limits_\Omega g(x,\: y,\: z) \dd{V}$.
                 \item $\displaystyle\iiint\limits_\Omega f(x,\: y,\: z) \dd{V}
                     = \iiint\limits_{\Omega_1} f(x,\: y,\: z) \dd{V} + \iiint\limits_{\Omega_2} f(x,\: y,\: z) \dd{V}$.
@@ -797,14 +816,14 @@ The nature of a critical point can be classified using the second derivative tes
 % Conventions:
 % Component-form vectors shall be written like $\avec{x(t),\:y(t),\:(z(t)}$
 \begin{definition}
-    A vector-valued function (VVF) is some function
+    A vector-valued function (VVF) is some function $\symbf{r}$
     with domain $\mathbb{R}$ and codomain $\mathbb{R}^n$.
     For example,
     \begin{equation*}
         \symbf{r}:\mathbb{R}\to\mathbb{R}^3
         :\symbf{r}(t)=\avec[\big]{x(t),\: y(t),\: z(t)}
     \end{equation*}
-    is a vector-valued function where $x,\:y,\:z: \mathbb{R}\to\mathbb{R}$.
+    is a VVF where $x,\:y,\:z: \mathbb{R}\to\mathbb{R}$.
 \end{definition}
 \begin{theorem}
     The domain of $\symbf{r}(t)$ is the intersection of the domains
@@ -816,10 +835,10 @@ The nature of a critical point can be classified using the second derivative tes
 \end{definition}
 \subsection{Limits and Continuity}
 \begin{theorem}[Limits of VVFs]
-    The limit of a VFF is the vector of the limits of its components.
+    The limit of a VVF is the vector of the limits of its components.
     \begin{equation*}
         \lim_{t\to a} \symbf{r}(t)
-        = \avec[\big]{\lim_{t\to a} x(t),\: \lim_{t\to a} y(t),\: \lim_{t\to a} z(t)}
+        = \avec[\bigg]{\lim_{t\to a} x(t),\: \lim_{t\to a} y(t),\: \lim_{t\to a} z(t)}
     \end{equation*}
 \end{theorem}
 \begin{theorem}[Continuity of VVFs]
@@ -831,13 +850,13 @@ The nature of a critical point can be classified using the second derivative tes
 \end{theorem}
 \subsection{Calculus with VVFs}
 \begin{theorem}[Derivatives of VVFs]
-    The derivative of a VFF is the vector of the derivatives of its components.
+    The derivative of a VVF is the vector of the derivatives of its components.
     \begin{equation*}
-        \dv{t}\symbf{r}(t) = \avec[\Big]{\dv{t}x(t),\: \dv{t}y(t),\: \dv{t}z(t)}
+        \dv{t}\symbf{r}(t) = \avec[\Bigg]{\dv{t}x(t),\: \dv{t}y(t),\: \dv{t}z(t)}
     \end{equation*}
 \end{theorem}
 \begin{theorem}[Integration of VVFs]
-    The integral of a VFF is the vector of the integrals of its components.
+    The integral of a VVF is the vector of the integrals of its components.
     \begin{equation*}
         \int\symbf{r}(t)\dd{t}
         = \avec[\Bigg]{\int x(t) \dd{t},\: \int y(t) \dd{t},\: \int z(t) \dd{t}}
@@ -891,7 +910,7 @@ The nature of a critical point can be classified using the second derivative tes
     The arc length $S$ of a smooth continuous VVF $\symbf{r}(t)$, is the distance along $\symbf{r}(t)$
     between $t=a$ and $t=b$, defined by
     \begin{equation*}
-        S = \int_a^b \norm{\dv{t}\symbf{r}(t)} \dd{t}
+        S = \int_a^b \norm{\symbf{r'}(t)} \dd{t}
     \end{equation*}
 \end{definition}
 \newpage
@@ -917,9 +936,9 @@ The nature of a critical point can be classified using the second derivative tes
 \end{definition}
 \begin{definition}[Linear Differential Equations]
     A linear differential equation does not have any products of the dependent variable with itself
-    or derivatives. The general form of a linear ODE or order $n$ is
+    or its derivatives. The general form of a linear ODE of order $n$ is
     \begin{equation*}
-        a_n(x)\dv[n]{y}{x} + a_{n-1}(x)\dv[n-1]{y}{x} + \cdots + a_1(x)\dv{y}{x} + a_0(x)y = f(x).
+        a_n(x)y^{\left( n \right)} + a_{n-1}(x)y^{\left( n-1 \right)} + \cdots + a_1(x)y' + a_0(x)y = F(x).
     \end{equation*}
     The dependent variable cannot be composed in another function.
 \end{definition}
@@ -935,8 +954,8 @@ For the autonomous differential equation
     A fixed point is the value of $y$ for which $f(y) = 0$.
 \end{definition}
 \begin{definition}[Stability]
-    By analysing the perturbation of the $f(y)$ near fixed points, we can determine the
-    stability of those fixed points.
+    By analysing the behaviour of $f(y)$ given a perturbation near fixed points, 
+    we can determine the stability of those fixed points.
     \begin{table}[H]
         \centering
         \begin{tabular}{c | c}
@@ -968,15 +987,15 @@ For the autonomous differential equation
 \subsection{Directly Integrable ODEs}
 For a differential equation of the form
 \begin{equation*}
-    \dv{y}{x} = g(x)
+    \dv{y}{x} = f(x)
 \end{equation*}
 \begin{equation*}
-    y(x) = \int g(x) \dd{x}.
+    y(x) = \int f(x) \dd{x}.
 \end{equation*}
 \subsection{Separable ODEs}
 For a differential equation of the form
 \begin{equation*}
-    \dv{y}{x} = p(x) q(y)
+    \dv{y}{x} = p(x) q(y),
 \end{equation*}
 a separation of variables followed by an integration w.r.t. $x$ yields an implicit solution.
 \begin{equation*}
@@ -991,40 +1010,39 @@ we can use the integrating factor
 \begin{equation*}
     I(x) = \e^{\int p(x) \dd{x}}
 \end{equation*}
-to solve the differential equation
+so that
 \begin{equation*}
     y(x) = \frac{1}{I(x)} \int I(x) q(x) \dd{x}
 \end{equation*}
-\subsection{Homogeneous ODEs}
 \subsection{Exact ODEs}
 A differential equation of the form
 \begin{equation*}
     P(x,\: y) + Q(x,\: y)\dv{y}{x} = 0
 \end{equation*}
-is exact if
+has the solution
 \begin{equation*}
-    P_y = Q_x.
+    \Psi(x,\: y) = c,
 \end{equation*}
-We find $\psi(x,\: y)$ using
+iff it is exact, namely when
+\begin{equation*}
+    P_y = Q_x
+\end{equation*}
+where $P = \Psi_x$ and $Q = \Psi_y$. Then
 \begin{gather*}
-    \psi(x,\: y) = \int P(x,\: y) \dd{x} + f(y) \\
-    \psi(x,\: y) = \int Q(x,\: y) \dd{y} + g(x)
+    \Psi(x,\: y) = \int P(x,\: y) \dd{x} + f(y) \\
+    \Psi(x,\: y) = \int Q(x,\: y) \dd{y} + g(x)
 \end{gather*}
-$f(y)$ and $g(x)$ can be determined by matching these two equations.
-The general solution to an exact ODE is then
-\begin{equation*}
-    \psi(x,\: y) = c
-\end{equation*}
+and $f(y)$ and $g(x)$ can be determined by solving these equations simultaneously.
 \newpage
 \section{Second-Order Differential Equations}
 A linear second-order differential equation is of the form
 \begin{equation*}
-    a_2(x)\dv[2]{y}{x}+ a_1(x)\dv{y}{x} + a_0(x)y = F(x).
+    a_2(x)y'' + a_1(x)y' + a_0(x)y = F(x).
 \end{equation*}
-\begin{description}
+\begin{itemize}
     \item If $F(x) = 0$, then the equation is homogeneous.
     \item If $F(x) \neq 0$, then the equation is nonhomogeneous.
-\end{description}
+\end{itemize}
 \begin{definition}[Initial Value Problem]
     An initial value problem specifies the value for $y$ and its derivative at a single value of the independent variable:
     \begin{align*}
@@ -1038,19 +1056,19 @@ A linear second-order differential equation is of the form
     \end{align*}
 \end{definition}
 \begin{theorem}[Superposition Principle]
-    Consider a homogeneous ODE
+    Consider the linear homogeneous ODE
     \begin{equation*}
-        a_n(x)\dv[n]{y}{x} + a_{n-1}(x)\dv[n-1]{y}{x} + \cdots + a_1(t)\dv{y}{x} + a_0(x)y = 0.
+        a_n(x)y^{\left( n \right)} + a_{n-1}(x)y^{\left( n-1 \right)} + \cdots + a_1(x)y' + a_0(x)y = 0.
     \end{equation*}
     If $y_1(x),\: y_2(x),\: \dots ,\: y_n(x)$ are solutions of the differential equation, then
     the linear combination of these solutions
     \begin{equation*}
         y(x) = c_1 y_1(x) + c_2 y_2(x) + \cdots + c_n y_n(x).
     \end{equation*}
-    is also a solution.
+    also satisfies the ODE.
 \end{theorem}
 \begin{theorem}[Fundamental Set of Solutions]
-    The $n$th order homogeneous ODE with \linebreak continuous coefficients on an open interval $I$,
+    The $n$th order linear homogeneous ODE with \linebreak continuous coefficients on an open interval $I$,
     has $n$ non-trivial linearly independent solutions that form
     a fundamental set of solutions on $I$.
 \end{theorem}
@@ -1059,10 +1077,9 @@ Reduction of order is a method for finding a second solution
 to an ODE, given a known solution.
 The second solution is of the form
 \begin{equation*}
-    y_2(x) = v(x) y_1(x).
+    y_2(x) = v\left(x\right) y_1(x).
 \end{equation*}
-By substituting this form into the differential equation, we will find an ODE for
-$v(x)$ that we can solve to find the solution $y_2(x)$.
+$v(x)$ can be determined by substituting $y_2$ into the ODE.
 \subsection{Homogeneous ODEs}
 A second-order constant-coefficient homogeneous ODE
 \begin{equation*}
@@ -1101,7 +1118,7 @@ For two complex conjugate roots, $\lambda = \alpha \pm \beta i$, the general sol
 \section{Nonhomogeneous ODEs}
 A second-order constant-coefficient nonhomogeneous ODE
 \begin{equation*}
-    a_2\dv[2]{y}{x} + a_1\dv{y}{x} + a_0y = F(x)
+    a_2y'' + a_1y' + a_0y = F(x)
 \end{equation*}
 has a general solutions of the form
 \begin{equation*}
@@ -1117,8 +1134,8 @@ and $y_P(x)$ satisfies
 \end{equation*}
 \subsection{Method of Undetermined Coefficients}
 To find the particular solution $y_P$, we must choose a likely
-form that it would take. The following table summarises the appropriate
-form of $y_P$ based on $F$.
+form that it would take. The following table summarises appropriate
+forms of $y_P$ based on $F$.
 \begin{table}[H]
     \centering
     \begin{tabular}{c | c}
@@ -1127,7 +1144,7 @@ form of $y_P$ based on $F$.
         \midrule
         a constant & A \\
         a polynomial of degree $n$ & $\displaystyle \sum_{i = 0}^n A_i x^i$ \\
-        an exponential $\e^{kx}$ & $A \e^{kx}$ \\
+        $\e^{kx}$ & $A \e^{kx}$ \\
         $\cos{\left( \omega x \right)}$ or $\sin{\left( \omega x \right)}$ & $A_0 \cos{\left( \omega x \right)} + A_1 \sin{\left( \omega x \right)}$ \\
         \bottomrule
     \end{tabular}
@@ -1163,12 +1180,12 @@ in order to form a \textit{fundamental set of solutions}.
     F = \text{spring force ($F_s$)} + \text{damping force ($F_d$)} + \text{external force ($f(t)$)}
 \end{equation*}
 \begin{description}
-    \item[Newton's Law] $F = m \dv[2]{y}{t}$
+    \item[Newton's Law] $F = m y''$
     \item[Spring force.] $F_s = -k y$
-    \item[Damping force.] $F_s = -\gamma \dv{y}{t}$
+    \item[Damping force.] $F_d = -\gamma y'$
 \end{description}
 \begin{equation*}
-    m \dv[2]{y}{t} + \gamma \dv{y}{t} + k y = f(t)
+    m y'' + \gamma y' + k y = f(t)
 \end{equation*}
 \subsubsection{Electrical Circuits}
 Current $i$ is defined as the rate of change of charge $q$
@@ -1177,14 +1194,16 @@ Current $i$ is defined as the rate of change of charge $q$
 \end{equation*}
 The voltage drop across various elements is given below:
 \begin{description}
-    \item[Resistor.] $iR$
-    \item[Capacitor.] $q/C$
-    \item[Inductor.] $L \dv{i}{t}$
+    \item[Voltage drop across a resistor:] $iR$
+    \item[Voltage drop across a capacitor:] $q/C$
+    \item[Voltage drop across an inductor:] $L \dv{i}{t}$
 \end{description}
-where $R$ is the resistance in \si{\ohm}, $C$ is the capacitance in \si{\farad}, and $L$ is the inductance in \si{\henry}.
+where $R$ is the resistance measured in Ohms (\si{\ohm}), 
+$C$ is the capacitance measured in Farads (\si{\farad}), 
+and $L$ is the inductance measured in Henrys (\si{\henry}).
 
 Kirchhoff's Voltage law states that the sum of voltages around a loop equals 0. 
-Therefore in an RLC circuit, with a voltage source supplying $v(t)$,
+Therefore in an RLC circuit, with a voltage source supplying $v(t)\si{\volt}$,
 \begin{align*}
     v(t) - iR - L \dv{i}{t} - \frac{q}{C} & = 0 \\
     L \dv[2]{q}{t} + R\dv{q}{t} + \frac{1}{C}q & = v(t).
